--- a/src/App.css
+++ b/src/App.css
@@ -4,11 +4,16 @@
 
 .fic-header {
   background-color: white;
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: #282c34;
+}
+
+.fic-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
