--- a/src/App.css
+++ b/src/App.css
@@ -14,6 +14,11 @@
 
 .fic-container {
   display: flex;
-  align-items: center;
-  justify-content: center;
+  justify-content: space-around;
+  width: 100%;
+}
+
+.fic-stream-chat {
+  width: 100%;
+  height: 100%;
 }
